--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {"version": 2,
  "name": "inotesBackend", 
 "builds": [ 
-{"src": "index.js", "use": "@vercel/node" } 
-]
+{"src": "app.js", "use": "@vercel/node" } 
+],
 "routes": [ {"src": "/(.+)", "dest": "/app.js" }
 ]
 } 
