--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Take your notes and save it in the cloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
+
   },
   "author": "",
   "license": "ISC",
