--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {"version": 2,
  "name": "inotesBackend", 
 "builds": [ 
-{"src": "app.js", "use": "@vercel/node" } 
+{"src": "index.js", "use": "@vercel/node" } 
 ],
-"routes": [ {"src": "/(.+)", "dest": "/app.js" }
+"routes": [ {"src": "/(.+)", "dest": "/index.js" }
 ]
 } 
